# ChangeLog for kde-base/kxkb
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kxkb/Attic/ChangeLog,v 1.59 2006/06/11 15:01:36 carlo Exp $

  11 Jun 2006; Carsten Lohrke <carlo@gentoo.org> kxkb-3.5.2.ebuild:
  Restore keywords.

  11 Jun 2006; Carsten Lohrke <carlo@gentoo.org> kxkb-3.5.2.ebuild,
  kxkb-3.5.3.ebuild:
  Adjust ebuilds to kde_src_unpack() patch handling changes.

*kxkb-3.5.3 (01 Jun 2006)

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> +kxkb-3.5.3.ebuild:
  Update to new release.

  01 Jun 2006; Thomas Cort <tcort@gentoo.org> kxkb-3.5.2.ebuild:
  Stable on alpha wrt Bug #132213.

  29 May 2006; Jason Wever <weeve@gentoo.org> kxkb-3.5.2.ebuild:
  Stable on SPARC wrt bug #132213.

  29 May 2006; Diego Pettenò <flameeyes@gentoo.org> -kxkb-3.4.1.ebuild,
  -kxkb-3.4.2.ebuild:
  Drop old versions.

  26 May 2006; Markus Rothe <corsair@gentoo.org> kxkb-3.5.2.ebuild:
  Stable on ppc64

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> kxkb-3.5.2.ebuild:
  Stable on amd64 wrt bug #132213

  26 May 2006; Markus Rothe <corsair@gentoo.org> kxkb-3.5.2.ebuild:
  Stable on ppc64

  26 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> kxkb-3.5.2.ebuild:
  Stable on x86 wrt bug #132213

  06 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/kxkb3.5.1.xx_XX_layouts.patch, -kxkb-3.5.0.ebuild,
  -kxkb-3.5.1.ebuild, -kxkb-3.5.1-r1.ebuild:
  Removed old 3.5.0/3.5.1 packages.

  01 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> kxkb-3.5.2.ebuild:
  Add ~x86-fbsd keyword.

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org> kxkb-3.5.0.ebuild,
  kxkb-3.5.1.ebuild, kxkb-3.5.1-r1.ebuild, kxkb-3.5.2.ebuild:
  Mark 3.5.2 3.5.1-r1 3.5.1 3.5.0 ~ia64

  27 Mar 2006; Aron Griffis <agriffis@gentoo.org> kxkb-3.4.3.ebuild:
  Mark 3.4.3 stable on ia64. #112842

  26 Mar 2006; Carsten Lohrke <carlo@gentoo.org> kxkb-3.5.2.ebuild: