@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST kdebase-3.4.3.tar.bz2 22425835 RMD160 7af02903b0fc750e7b9778391ef8948b54f69ce7 SHA1 87b72aaf291fdb78fa9feb9acf4476d41485e486 SHA256 d7802446a046ed647e5d068b7c4a21cfdb9c883b31de65838f106c5b5d4b8b1c
 DIST kdebase-3.5-patchset-01.tar.bz2 5552 RMD160 196f2f57924ccab4109061794d09f579917f4ed1 SHA1 6cf289b7d30f2b7899aac092989cccca5992cecf SHA256 10b635594c7936f618abf3a9b41785fb1cb2c2d2a4be5bb889abff518b8e5ee0
 DIST kdebase-3.5.2.tar.bz2 23590820 RMD160 216ff59c49bb4fee2aa3b7d976ec40a8cccff107 SHA1 16cddd8766c3bd8821044fe9cce66f5291c8412b SHA256 21150b7e553e83487e70e70e3d13ce107c6c5d57133b40f413807887a9e431f7
@@ -10,14 +13,14 @@ EBUILD kxkb-3.5.2.ebuild 905 RMD160 9821cd8fd42a5f5a11a05d7c256c911a0552ec6b SHA
 MD5 ec26260744007e8088d00891cab5534a kxkb-3.5.2.ebuild 905
 RMD160 9821cd8fd42a5f5a11a05d7c256c911a0552ec6b kxkb-3.5.2.ebuild 905
 SHA256 f0e53aeb732cee9206929e59e4031008283e35fd4605cb3c511d35422940f6b8 kxkb-3.5.2.ebuild 905
-EBUILD kxkb-3.5.3.ebuild 910 RMD160 b77b5acf507d65dcf05df0dee7f3dde5266c86b9 SHA1 f0a3053bb6eb9a3b351dd256a100d8b82f11eb37 SHA256 7b3655355ea5176587ed0f3fcc86d3c5345e55172356e657ac1c348c4d96d200
-MD5 f132d32b5b6309682134f359afaea21d kxkb-3.5.3.ebuild 910
-RMD160 b77b5acf507d65dcf05df0dee7f3dde5266c86b9 kxkb-3.5.3.ebuild 910
-SHA256 7b3655355ea5176587ed0f3fcc86d3c5345e55172356e657ac1c348c4d96d200 kxkb-3.5.3.ebuild 910
-MISC ChangeLog 7610 RMD160 c864c2d6b73f1dbe1586c2c63b62e049f0f2a0d8 SHA1 1b11182909701213fe4b3bddc62be1d40c835985 SHA256 a1efd71f99b382f9d764b6674cb9ef4f0915298a607599ae1a0819dc42d98737
-MD5 adc75dbd1e238318a3ffb9f239b416af ChangeLog 7610
-RMD160 c864c2d6b73f1dbe1586c2c63b62e049f0f2a0d8 ChangeLog 7610
-SHA256 a1efd71f99b382f9d764b6674cb9ef4f0915298a607599ae1a0819dc42d98737 ChangeLog 7610
+EBUILD kxkb-3.5.3.ebuild 1066 RMD160 d2faa9ff84e411f046f59cb14125948198c50292 SHA1 4753a1c424d1a0b134097c5b9259255f58b495e2 SHA256 88ef4e1acf0988d76f457f55a1899010bb052a374680186b42c19129783f0b69
+MD5 d0034c5ad9ede3d0a09ab7dd81f3e392 kxkb-3.5.3.ebuild 1066
+RMD160 d2faa9ff84e411f046f59cb14125948198c50292 kxkb-3.5.3.ebuild 1066
+SHA256 88ef4e1acf0988d76f457f55a1899010bb052a374680186b42c19129783f0b69 kxkb-3.5.3.ebuild 1066
+MISC ChangeLog 7730 RMD160 207da0637b9857fd97b64f7dcf5060c6b529e3f9 SHA1 a84e1a0f408d4021ae5e91dcbdb8942e389afb45 SHA256 2bdca058785f555cf19a7a38dfb860878c6fbcd7b6f7a35adef5b532058b25ef
+MD5 bd67402f80f9553eec6ca50896bed67e ChangeLog 7730
+RMD160 207da0637b9857fd97b64f7dcf5060c6b529e3f9 ChangeLog 7730
+SHA256 2bdca058785f555cf19a7a38dfb860878c6fbcd7b6f7a35adef5b532058b25ef ChangeLog 7730
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -31,3 +34,10 @@ SHA256 b97b52aca9ba44a197617cc7a6c53e4dd3109aa5a7bbe5b55d9b5a082d361f82 files/di
 MD5 9ac2db0ffd1dd385ceaba456f341146f files/digest-kxkb-3.5.3 518
 RMD160 c47af94094e7e7f03e4c49271c2f6e5c538d332d files/digest-kxkb-3.5.3 518
 SHA256 3d411f328f154d83705712ff98823e5fac1601a2e982fa88bd6a40f55d47559e files/digest-kxkb-3.5.3 518
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.3 (GNU/Linux)
+
+iD8DBQFEn3E2AiZjviIA2XgRAphjAJ9vm1vk4Ev3m1Olnb4J+IFUfR0fSQCfbxfb
+rENsQ3EM6EekfvBNYw6nbFA=
+=3Nqo
+-----END PGP SIGNATURE-----
