@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kxkb/Attic/kxkb-3.5.3.ebuild,v 1.2 2006/06/11 13:04:59 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kxkb/Attic/kxkb-3.5.3.ebuild,v 1.3 2006/06/26 05:31:24 flameeyes Exp $
 
 KMNAME=kdebase
 MAXKDEVER=$PV
@@ -28,5 +28,9 @@ src_unpack() {
 
 	# Avoid using imake (kde bug 114466)
 	epatch "${WORKDIR}/patches/kdebase-3.5.0_beta2-noimake.patch"
+
+	# Remove reference to kde.desktop in AC_OUTPUT to allow building with
+	# autoconf 2.59d
+	sed -i -e '/kde.desktop/ s:^:#:g' "${S}/kdm/configure.in.in"
 }
 
