@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kxkb
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kxkb/Attic/ChangeLog,v 1.59 2006/06/11 15:01:36 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kxkb/Attic/ChangeLog,v 1.60 2006/06/26 05:31:24 flameeyes Exp $
+
+  26 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> kxkb-3.5.3.ebuild:
+  Add sed to fix kxkb with autoconf 2.59d.
 
   11 Jun 2006; Carsten Lohrke <carlo@gentoo.org> kxkb-3.5.2.ebuild:
   Restore keywords.
